@@ -20,7 +20,9 @@
   *  - Added extra masks to the SPI driver, changed SPI_Init() so that the clock polarity and sample modes can be set
   *  - Added new callback to the HID report parser, so that the user application can filter only the items it is interested
   *    in to be stored into the HIDReportInfo structure to save RAM
-  *  - Added support for the officially recommended layout of the external peripherals connected to the BUMBLEB board
+  *  - Added support for the officially recommended external peripheral layout for the BUMBLEB board (thanks to Dave Fletcher)
+  *  - Added new Pipe_IsFrozen() macro to determine if the currently selected pipe is frozen
+  *  - Added new USB_GetHIDReportSize() function to the HID report parser to retrieve the size of a given report by its ID
   *  
   *  <b>Changed:</b>
   *  - SetIdle requests to the HID device driver with a 0 idle period (send changes only) now only affect the requested
